syntax = "proto3";

option go_package = "./gen/protobuf";

import "google/api/annotations.proto";
import "google/api/httpbody.proto";

message SendMessageRequest {}

message SendMessageResponse {}

service JapellaDashboardApi {
	rpc SendMessage(SendMessageRequest) returns (SendMessageResponse) {
		option (google.api.http) = {
			get: "/api/SendMessage"
		};
	}
}
