syntax = "proto3";

option go_package = "./gen/protobuf";

message IncommingMessage {
	string content = 1;
	string channel = 2;
	string author = 3;
	string server = 4;
	string protocol = 5;
	string message_id = 6;
	int64 timestamp = 7;
}

message OutgoingMessage {
	string content = 1;
	string channel = 2;
	string protocol = 3;
	string incomming_message_id = 4;
}

message ThreadSearchRequest {
    string protocol = 1;
}

message ThreadSearchResponse {
    repeated Thread threads = 1;
}

message Thread {
    string title = 1;
}
